Add command line parsing