@@ -1,4 +1,4 @@
-package test;
+package main;
 
 import java.awt.Color;
 import java.awt.Graphics2D;
@@ -7,6 +7,8 @@ import java.io.File;
 import java.io.IOException;
 import java.util.ArrayList;
 import java.util.Collections;
+import java.util.Date;
+import java.util.LinkedList;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
 import java.util.concurrent.TimeUnit;
@@ -18,19 +20,22 @@ public class MandelbrotSet {
 	BufferedImage bufImage;
 	ArrayList<Task> tasks;
 	int tasksCount;
-	int subtasksCount;
+	int subtasksCountPerTask;
+	boolean isQuiet;
 
-	public MandelbrotSet(int width, int height,
-			double a, double b, double c, double d,
-			String imageName, int tasksCount)
+	public MandelbrotSet(int xPixels, int yPixels,
+			double xStart, double xEnd, double yStart, double yEnd,
+			String imageName, int tasksCount, boolean isQuiet)
 	{
-		this.imageName = imageName + ".png";
+		this.imageName = imageName;
 		this.tasksCount = tasksCount;
-		this.subtasksCount = tasksCount * 2; // Might cause too many and too small subtasks
-		initializeImage(width, height);
+		this.isQuiet = isQuiet;
+		
+		this.subtasksCountPerTask = (tasksCount == 1) ? 1 : 4;
+		initializeImage(xPixels, yPixels);
 
 		tasks = new ArrayList<Task>(tasksCount);
-		createTasks(width, height, a, b, c, d);
+		createTasks(xPixels, yPixels, xStart, xEnd, yStart, yEnd);
 	}
 
 	void initializeImage(int width, int height)
@@ -53,10 +58,10 @@ public class MandelbrotSet {
 	void createTasks(int width, int height, double a, double b, double c, double d)
 	{
 		int xPixelsWidth = (int) Math.ceil(width / (double)tasksCount);
-		int yPixelsHeight = (int) Math.ceil(height / (double)subtasksCount);
+		int yPixelsHeight = (int) Math.ceil(height / (double)subtasksCountPerTask);
 		
 		double xWidth = Math.abs(b - a) / tasksCount;
-		double yHeight = Math.abs(d - c) / subtasksCount;
+		double yHeight = Math.abs(d - c) / subtasksCountPerTask;
 				
 		int xPixelStart, xPixelEnd;
 		int yPixelStart, yPixelEnd;
@@ -64,18 +69,18 @@ public class MandelbrotSet {
 		double xStart, xEnd;
 		double yStart, yEnd;
 		
-		ArrayList<Subtask> subtasks = new ArrayList<>(tasksCount * subtasksCount);
+		LinkedList<Subtask> subtasks = new LinkedList<Subtask>();
 		
-		for(int j = 0; j < subtasksCount; j++) {
+		for(int j = 0; j < subtasksCountPerTask; j++) {
 			yPixelStart = j * yPixelsHeight;
 			yStart = c + j * yHeight;
 			
-			if(j == subtasksCount - 1) {
+			if(j == subtasksCountPerTask - 1) {
 				yPixelEnd = height - 1;
 				yEnd = d;
 			} else {
-				yPixelEnd = (j+1) * yPixelsHeight - 1;
-				yEnd = c + (j+1) * yHeight;
+				yPixelEnd = (j + 1) * yPixelsHeight - 1;
+				yEnd = c + (j + 1) * yHeight;
 			}
 			
 			for(int i = 0; i < tasksCount; i++) {
@@ -95,25 +100,32 @@ public class MandelbrotSet {
 								xPixelStart, xPixelEnd, yPixelStart, yPixelEnd,
 								bufImage)
 						);
-				System.out.printf("[%d; %d]x[%d; %d]%n", xPixelStart, xPixelEnd, yPixelStart, yPixelEnd);
-				System.out.printf("[%f; %f]x[%f; %f]%n%n", xStart, xEnd, yStart, yEnd);
+				// uncomment to see current subtask's data
+				//System.out.printf("[%d; %d]x[%d; %d]%n", xPixelStart, xPixelEnd, yPixelStart, yPixelEnd);
+				//System.out.printf("[%f; %f]x[%f; %f]%n%n", xStart, xEnd, yStart, yEnd);
 			}
 		}
 		
 		dealSubtasks(subtasks);
 	}
 	
-	void dealSubtasks(ArrayList<Subtask> subtasks)
+	void dealSubtasks(LinkedList<Subtask> subtasks)
 	{
 		Collections.shuffle(subtasks);
 		
-		for(int i = 0; i < tasksCount; i++) {
-			tasks.add(new Task("Thread " + Integer.toString(i)));
+		for(int i = 1; i <= tasksCount; i++) {
+			tasks.add(new Task("Thread " + Integer.toString(i), isQuiet));
 		}
 		
 		int current = 0;
+		@SuppressWarnings("unused")
+		int i = 1;
 		while(!subtasks.isEmpty()) {
-			tasks.get(current++).addSubtask(subtasks.remove(subtasks.size() -1));
+			// uncomment to see where each task is dealt
+			//System.out.printf("Subtask(%d): %s goes to thread %d%n",
+			//		i++, subtasks.getLast(), current + 1);
+			
+			tasks.get(current++).addSubtask(subtasks.removeLast());
 			current %= tasksCount;
 		}
 	}
@@ -121,18 +133,27 @@ public class MandelbrotSet {
 	public void generate()
 	{
 		ExecutorService pool = Executors.newFixedThreadPool(tasksCount);
-
+		Date start = new Date();
+		Date end;
+		
 		tasks.forEach(
 				task -> pool.execute(task)
 				);
 		pool.shutdown();
 		
 		try {
-			pool.awaitTermination(60, TimeUnit.SECONDS);
+			pool.awaitTermination(360, TimeUnit.SECONDS);
 		} catch (Exception e) {
-			System.out.println("Execption while waiting.. :(");
+			System.out.println("Exception while waiting.. :(");
 		}
 
 		saveImage();
+		
+		end = new Date();
+		long runDuration = end.getTime() - start.getTime();
+		
+		if(isQuiet == false) {
+			System.out.printf("%nTotal execution time for current run: %d ms%n", runDuration);
+		}
 	}
 }
